# AI-sandbox

./: .gitignore  README.md  browser_agent.py  main.py  notebook.ipynb  pyproject.toml  sandbox_eda.py
prompts/: system_prompt.py
